--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,24 +1,23 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    push:
+        branches: ['main']
+    pull_request:
+        branches: ['main']
 
 jobs:
+    build-and-push-docker-image:
+        runs-on: ubuntu-latest
 
-  build-and-push-docker-image:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: DockerHub Login
-      uses: docker/login-action@v2.0.0
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v3.1.1
-      with:
-        tags: denesbeck/secret-vault:latest
+        steps:
+            - name: DockerHub Login
+              uses: docker/login-action@v2.0.0
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+            - name: Build and push Docker images
+              uses: docker/build-push-action@v3.1.1
+              with:
+                  tags: denesbeck/secret-vault:latest
+                  push: true
